compiler/tools/fpp-check/test/port_numbering/unmatched_connection_port_number_in_use_by_input_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/unmatched_connection_port_number_in_use_by_input_port.fpp:32.7
      c2.pOut -> c1.pIn
      ^
error: port number 0 is already in use
previous usage is here:
[ local path prefix ]/compiler/tools/fpp-check/test/port_numbering/unmatched_connection_port_number_in_use_by_input_port.fpp:33.17
      unmatched c2.pOut -> c1.pIn[0]
                ^
